Fixed button alignment for small screen.

--- a/_scss/club/_competition_card.scss
+++ b/_scss/club/_competition_card.scss
@@ -62,12 +62,8 @@
     }
 
     > div {
-      @media (min-width: $sm) {
-        margin-bottom: 0 !important;
-      }
-
-      &:last-child {
-        margin-bottom: 0;
+      @media (max-width: $sm) {
+        margin-bottom: 1rem;
       }
     }
 
